@@ -17,6 +17,7 @@ version <next>:
 - AudioToolbox audio encoders
 - coreimage filter (GPU based image filtering on OSX)
 - libdcadec removed
+- bitstream filter for extracting DTS core
 
 version 3.0:
 - Common Encryption (CENC) MP4 encoding and decoding support
